Extend JPA query connector predicates