@@ -1,5 +1,6 @@
 package org.pipelineframework.config.pipeline;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
@@ -8,20 +9,61 @@ import java.util.Map;
  */
 public record PipelineYamlJpaQuery(
     String entity,
-    Map<String, String> where,
+    Map<String, PipelineYamlJpaPredicate> where,
     Map<String, String> projection,
+    Map<String, String> orderBy,
+    Integer limit,
     String result
 ) {
+    public PipelineYamlJpaQuery(String entity, Map<String, String> where, Map<String, String> projection, String result) {
+        this(entity, legacyWhere(where), projection, Map.of(), null, result);
+    }
+
     public PipelineYamlJpaQuery {
         if (entity == null || entity.isBlank()) {
             throw new IllegalArgumentException("query jpa.entity must not be blank");
         }
-        where = validateMap(where, "where", true);
+        where = validateWhere(where);
         projection = validateMap(projection, "projection", false);
+        orderBy = validateOrderBy(orderBy);
+        if (limit != null && limit != 1) {
+            throw new IllegalArgumentException("query jpa.limit supports only 1 in v2");
+        }
+        if (limit != null && orderBy.isEmpty()) {
+            throw new IllegalArgumentException("query jpa.limit requires orderBy");
+        }
         result = result == null || result.isBlank() ? "single" : result.trim();
         if (!"single".equals(result)) {
             throw new IllegalArgumentException("query jpa.result supports only single in v1");
         }
+    }
+
+    private static Map<String, PipelineYamlJpaPredicate> legacyWhere(Map<String, String> values) {
+        if (values == null || values.isEmpty()) {
+            return Map.of();
+        }
+        Map<String, PipelineYamlJpaPredicate> normalized = new LinkedHashMap<>();
+        values.forEach((key, value) -> normalized.put(key, PipelineYamlJpaPredicate.equalTo(value)));
+        return Collections.unmodifiableMap(new LinkedHashMap<>(normalized));
+    }
+
+    private static Map<String, PipelineYamlJpaPredicate> validateWhere(Map<String, PipelineYamlJpaPredicate> values) {
+        if (values == null || values.isEmpty()) {
+            throw new IllegalArgumentException("query jpa.where must not be empty");
+        }
+        Map<String, PipelineYamlJpaPredicate> normalized = new LinkedHashMap<>();
+        for (Map.Entry<String, PipelineYamlJpaPredicate> entry : values.entrySet()) {
+            String key = entry.getKey();
+            PipelineYamlJpaPredicate value = entry.getValue();
+            if (key == null || key.isBlank()) {
+                throw new IllegalArgumentException("query jpa.where must not contain blank keys");
+            }
+            if (value == null) {
+                throw new IllegalArgumentException("query jpa.where." + key + " must not be null");
+            }
+            normalized.put(key.trim(), value);
+        }
+        return Collections.unmodifiableMap(new LinkedHashMap<>(normalized));
     }
 
     private static Map<String, String> validateMap(Map<String, String> values, String field, boolean required) {
@@ -43,6 +85,19 @@ public record PipelineYamlJpaQuery(
             }
             normalized.put(key.trim(), value.trim());
         }
-        return Map.copyOf(normalized);
+        return Collections.unmodifiableMap(new LinkedHashMap<>(normalized));
+    }
+
+    private static Map<String, String> validateOrderBy(Map<String, String> values) {
+        Map<String, String> normalized = validateMap(values, "orderBy", false);
+        Map<String, String> directions = new LinkedHashMap<>();
+        normalized.forEach((path, direction) -> {
+            String lower = direction.toLowerCase(java.util.Locale.ROOT);
+            if (!"asc".equals(lower) && !"desc".equals(lower)) {
+                throw new IllegalArgumentException("query jpa.orderBy." + path + " must be asc or desc");
+            }
+            directions.put(path, lower);
+        });
+        return Collections.unmodifiableMap(directions);
     }
 }
